--- a/app/faq.html
+++ b/app/faq.html
@@ -5,91 +5,72 @@
         <h1 class="f_page--title">FAQ</h1>
 
         <div class="f_page--box">
-
             <div class="f_page--item">
-                <div class="f_page--item__header" aria-expanded="false">
+                <div class="f_page--item__header accordion">
                     <h4>How does the free trial work?</h4>
                     <div class="f_page--item__button">
                         <i></i>
                         <i></i>
                     </div>
                 </div>
-                <div class="f_page--item__info">
-                    <p>A natural antioxidant that lowers stress and anxiety levels. Your body
-                        naturally produces GABA to bring your nervous system back to a more stable state. Natural
-                        sources of GABA include berries, fish, and whole grains.</p>
-                    <p>A natural antioxidant that lowers stress and anxiety levels. Your body
-                        naturally produces GABA to bring your nervous system back to a more stable state. Natural
-                        sources of GABA include berries, fish, and whole grains.</p>
-                    <p>A natural antioxidant that lowers stress and anxiety levels. Your body
-                        naturally produces GABA to bring your nervous system back to a more stable state. Natural
-                        sources of GABA include berries, fish, and whole grains.</p>
+                <div class="panel">
+                    <div class="f_page--item__info">
+                        <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                            naturally produces GABA to bring your nervous system back to a more stable state. Natural
+                            sources of GABA include berries, fish, and whole grains.</p>
+                        <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                            naturally produces GABA to bring your nervous system back to a more stable state. Natural
+                            sources of GABA include berries, fish, and whole grains.</p>
+                        <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                            naturally produces GABA to bring your nervous system back to a more stable state. Natural
+                            sources of GABA include berries, fish, and whole grains.</p>
+                    </div>
                 </div>
             </div>
-
             <div class="f_page--item">
-                <div class="f_page--item__header" aria-expanded="false">
+                <div class="f_page--item__header accordion">
                     <h4>How does the free trial work?</h4>
                     <div class="f_page--item__button">
                         <i></i>
                         <i></i>
                     </div>
                 </div>
-                <div class="f_page--item__info">
-                    <p>A natural antioxidant that lowers stress and anxiety levels. Your body
-                        naturally produces GABA to bring your nervous system back to a more stable state. Natural
-                        sources of GABA include berries, fish, and whole grains.</p>
-                    <p>A natural antioxidant that lowers stress and anxiety levels. Your body
-                        naturally produces GABA to bring your nervous system back to a more stable state. Natural
-                        sources of GABA include berries, fish, and whole grains.</p>
-                    <p>A natural antioxidant that lowers stress and anxiety levels. Your body
-                        naturally produces GABA to bring your nervous system back to a more stable state. Natural
-                        sources of GABA include berries, fish, and whole grains.</p>
+                <div class="panel">
+                    <div class="f_page--item__info">
+                        <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                            naturally produces GABA to bring your nervous system back to a more stable state. Natural
+                            sources of GABA include berries, fish, and whole grains.</p>
+                        <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                            naturally produces GABA to bring your nervous system back to a more stable state. Natural
+                            sources of GABA include berries, fish, and whole grains.</p>
+                        <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                            naturally produces GABA to bring your nervous system back to a more stable state. Natural
+                            sources of GABA include berries, fish, and whole grains.</p>
+                    </div>
                 </div>
             </div>
-
             <div class="f_page--item">
-                <div class="f_page--item__header" aria-expanded="false">
+                <div class="f_page--item__header accordion">
                     <h4>How does the free trial work?</h4>
                     <div class="f_page--item__button">
                         <i></i>
                         <i></i>
                     </div>
                 </div>
-                <div class="f_page--item__info">
-                    <p>A natural antioxidant that lowers stress and anxiety levels. Your body
-                        naturally produces GABA to bring your nervous system back to a more stable state. Natural
-                        sources of GABA include berries, fish, and whole grains.</p>
-                    <p>A natural antioxidant that lowers stress and anxiety levels. Your body
-                        naturally produces GABA to bring your nervous system back to a more stable state. Natural
-                        sources of GABA include berries, fish, and whole grains.</p>
-                    <p>A natural antioxidant that lowers stress and anxiety levels. Your body
-                        naturally produces GABA to bring your nervous system back to a more stable state. Natural
-                        sources of GABA include berries, fish, and whole grains.</p>
-                </div>
-            </div>
-
-            <div class="f_page--item">
-                <div class="f_page--item__header" aria-expanded="false">
-                    <h4>How does the free trial work?</h4>
-                    <div class="f_page--item__button">
-                        <i></i>
-                        <i></i>
+                <div class="panel">
+                    <div class="f_page--item__info">
+                        <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                            naturally produces GABA to bring your nervous system back to a more stable state. Natural
+                            sources of GABA include berries, fish, and whole grains.</p>
+                        <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                            naturally produces GABA to bring your nervous system back to a more stable state. Natural
+                            sources of GABA include berries, fish, and whole grains.</p>
+                        <p>A natural antioxidant that lowers stress and anxiety levels. Your body
+                            naturally produces GABA to bring your nervous system back to a more stable state. Natural
+                            sources of GABA include berries, fish, and whole grains.</p>
                     </div>
                 </div>
-                <div class="f_page--item__info">
-                    <p>A natural antioxidant that lowers stress and anxiety levels. Your body
-                        naturally produces GABA to bring your nervous system back to a more stable state. Natural
-                        sources of GABA include berries, fish, and whole grains.</p>
-                    <p>A natural antioxidant that lowers stress and anxiety levels. Your body
-                        naturally produces GABA to bring your nervous system back to a more stable state. Natural
-                        sources of GABA include berries, fish, and whole grains.</p>
-                    <p>A natural antioxidant that lowers stress and anxiety levels. Your body
-                        naturally produces GABA to bring your nervous system back to a more stable state. Natural
-                        sources of GABA include berries, fish, and whole grains.</p>
-                </div>
             </div>
-
         </div>
     </div>
 </section>
