--- a/app/index.html
+++ b/app/index.html
@@ -9,7 +9,7 @@
 
 <section class="explore__section" data-scroll-section>
     <div class="container" data-scroll data-scroll-speed="2">
-        <h2 class="explore__section--title">Explore our Product</h2>
+        <h2 class="explore__section--title">Explore our Products</h2>
 
         <div class="swiper explore-slider">
             <!-- Additional required wrapper -->
