--- a/app/sp-tea.html
+++ b/app/sp-tea.html
@@ -80,62 +80,71 @@
     <div class="sp_faq--wrapper">
 
         <div class="sp_faq--item">
-            <div class="sp_faq--item__header" aria-expanded="false">
+            <div class="sp_faq--item__header accordion">
                 <span>about our mushroom</span>
                 <div class="sp_faq--item__header--button">
                     <i></i>
                     <i></i>
                 </div>
             </div>
-            <div class="sp_faq--item__info">
-                <img src="images/dist/sp_faq--item__info--tea.webp" alt="">
-                <div class="sp_faq--item__info--text">
-                    <ul>
-                        <li>
-                            <p>Our mushrooms are grown organically in the USA but originate from the ancient lands of
-                                Oaxaca, Mexico, and were used by the indigenous people known as the Mazatecs.
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Our mushrooms are only harvested when the person handling them is in a meditative state.
-                            </p>
-                        </li>
-                    </ul>
+            <div class="panel">
+                <div class="sp_faq--item__info">
+                    <img src="images/dist/sp_faq--item__info--tea.webp" alt="">
+                    <div class="sp_faq--item__info--text">
+                        <ul>
+                            <li>
+                                <p>Our mushrooms are grown organically in the USA but originate from the ancient lands
+                                    of
+                                    Oaxaca, Mexico, and were used by the indigenous people known as the Mazatecs.
+                                </p>
+                            </li>
+                            <li>
+                                <p>
+                                    Our mushrooms are only harvested when the person handling them is in a meditative
+                                    state.
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="sp_faq--item">
-            <div class="sp_faq--item__header" aria-expanded="false">
+            <div class="sp_faq--item__header accordion">
                 <span>How to use</span>
                 <div class="sp_faq--item__header--button">
                     <i></i>
                     <i></i>
                 </div>
             </div>
-            <div class="sp_faq--item__info">
-                <img src="images/dist/sp_faq--item__info--tea-2.webp" alt="">
-                <div class="sp_faq--item__info--text">
-                    <p>Add boiling water and stir well for 30 seconds. Steep for 5 minutes. Keep teabag in cup and
-                        enjoy.</p>
+            <div class="panel">
+                <div class="sp_faq--item__info">
+                    <img src="images/dist/sp_faq--item__info--tea-2.webp" alt="">
+                    <div class="sp_faq--item__info--text">
+                        <p>Add boiling water and stir well for 30 seconds. Steep for 5 minutes. Keep teabag in cup and
+                            enjoy.</p>
+                    </div>
                 </div>
             </div>
         </div>
 
         <div class="sp_faq--item">
-            <div class="sp_faq--item__header" aria-expanded="false">
-                <span>INgredients</span>
+            <div class="sp_faq--item__header accordion">
+                <span>Ingredients</span>
                 <div class="sp_faq--item__header--button">
                     <i></i>
                     <i></i>
                 </div>
             </div>
-            <div class="sp_faq--item__info">
-                <img src="images/dist/sp_faq--item__info--tea-3.webp" alt="">
-                <div class="sp_faq--item__info--text">
-                    <p>Organic Black Tea, Organic Ginger Root, Organic Lemongrass, Organic Lemon Peel, Organic Orange
-                        Peel, Organic Oaxacan Extract, Organic Peppermint Leaves, Organic Blackberry Leaves. </p>
+            <div class="panel">
+                <div class="sp_faq--item__info">
+                    <img src="images/dist/sp_faq--item__info--tea-3.webp" alt="">
+                    <div class="sp_faq--item__info--text">
+                        <p>Organic Black Tea, Organic Ginger Root, Organic Lemongrass, Organic Lemon Peel, Organic
+                            Orange
+                            Peel, Organic Oaxacan Extract, Organic Peppermint Leaves, Organic Blackberry Leaves. </p>
+                    </div>
                 </div>
             </div>
         </div>
