--- a/app/parts/footer.html
+++ b/app/parts/footer.html
@@ -40,6 +40,15 @@
 </main>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/ScrollTrigger.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script>
+    $(document).ready(function() {
+        $(".accordion").on("click", function() {
+            $(this).toggleClass("is_active");
+            $(this).next().slideToggle(500);
+        });
+    });
+</script>
 <script src="js/app.min.js"></script>
 </body>
 </html>
