--- a/app/products.html
+++ b/app/products.html
@@ -2,8 +2,8 @@
 
 <section class="p_header" data-scroll-section>
     <div class="p_header--wrap">
-        <h1 class="p_header--title" data-scroll data-scroll-speed="1">precision <br> caps</h1>
-        <div class="p_header--description" data-scroll data-scroll-speed="1">
+        <h1 class="p_header--title">precision <br> caps</h1>
+        <div class="p_header--description">
             <p>Designed to help you reduce stress & anxiety, be creative, and stay focused. Perfect for meetings, work,
                 and everyday life</p>
         </div>
