--- a/app/parts/head.html
+++ b/app/parts/head.html
@@ -1,4 +1,4 @@
-<header class="header__main" data-scroll-section>
+<header class="header__main">
     <div class="header__main--burger">
         <i></i>
         <i></i>
